--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -117,10 +117,10 @@
                             <p class="card-text">Status: {{this.status}}</p>
                             <p class="card-text">Category: {{this.category}}</p>
                             {{#if ../isLoggedIn}}
-                                <button type="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                                <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
                                 {{#if ../isAdmin}}
-                                    <button type="button" class="btn btn-danger deleteButton" data-product-id="{{this._id}}">Delete Product</button>
-                                    <button type="button" class="btn btn-warning updateButton" data-product-id="{{this._id}}">Update Product</button>
+                                    <button type="button" class="btn btn-danger me-2 mb-2 deleteButton" data-product-id="{{this._id}}">Delete Product</button>
+                                    <button type="button" class="btn btn-warning me-2 mb-2 updateButton" data-product-id="{{this._id}}">Update Product</button>
                                 {{/if}}
                             {{/if}}
                         </div>
