--- a/src/views/registerView.handlebars
+++ b/src/views/registerView.handlebars
@@ -1,77 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Register Form</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   </head>
-   <body>
-      <section class="bg-primary p-3 p-md-4 p-xl-5">
-         <div class="container">
-            <div class="row justify-content-center">
-               <div class="col-12 col-md-9 col-lg-7 col-xl-6 col-xxl-5">
-                  <div class="card border-0 shadow-sm rounded-4">
-                     <div class="card-body p-3 p-md-4 p-xl-5">
-                        <div class="row">
-                           <div class="col-12">
-                              <div class="mb-5">
-                                 <h3>Register Form</h3>
-                              </div>
-                           </div>
-                        </div>
-                        <form method="post" action="/register">
-                           <div class="row gy-3 overflow-hidden">
-                              <div class="col-12">
-                                 <div class="form-floating mb-3">
-                                    <input type="user" class="form-control" name="user" id="user">
-                                    <label for="user">User</label>
-                                 </div>
-                              </div>
-                              <div class="col-12">
-                                 <div class="form-floating mb-3">
-                                    <input type="email" class="form-control" name="email" id="email">
-                                    <label for="email">Email</label>
-                                 </div>
-                              </div>
-                              <div class="col-12">
-                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" name="password" id="password">
-                                    <label for="password">Password</label>
-                                 </div>
-                              </div>
-                              <div class="col-12">
-                                 <div class="d-grid">
-                                    <button type="submit" class="btn btn-primary">Register</button>
-                                 </div>
-                              </div>
-                           </div>
-                        </form>
-                        <div class="row">
-                           <div class="col-12">
-                              <hr class="mt-5 mb-4 border-secondary-subtle">
-                              <div class="d-grid">
-                                 <a class="link-body-emphasis link-offset-2 link-underline-opacity-0 link-underline-opacity-0-hover" href="/login" target="_self">
-                                 <button class="btn btn-info w-100">
-                                    Login
-                                 </button>
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Register Form</title>
+</head>
+<body>
+    <header class="bg-light py-3">
+        <div class="container">
+            <div class="d-flex align-items-center">
+                <img src="/img/main-logo.png" alt="Main Logo" class="me-3">
+                <div class="flex-grow-1 text-center">
+                    <h2>Register Form</h2>
+                </div>
+                <div class="d-flex align-items-center">
+                    {{#if isLoggedIn}}
+                        <a href="/logout" class="btn btn-outline-danger">Logout</a>
+                    {{else}}
+                        <a href="/login" class="btn btn-outline-primary">Login</a>
+                    {{/if}}
+                </div>
             </div>
-         </div>
-      </section>
-      
-      {{#if failRegister}}
-      <script type="text/javascript">
-         alert('Register Failed, User exists!');
-      </script>
-      {{/if}}
+        </div>
+    </header>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   </body>
+    <section class="bg-light py-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 col-lg-6">
+                    <div class="card border-0 shadow-sm rounded-4">
+                        <div class="card-body p-4">
+                            <h3 class="text-center mb-4">Register Form</h3>
+                            <form method="post" action="/register">
+                                <div class="mb-3">
+                                    <label for="user" class="form-label">User</label>
+                                    <input type="text" class="form-control" name="user" id="user" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" name="email" id="email" required>
+                                </div>
+                                <div class="mb-4">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" class="form-control" name="password" id="password" required>
+                                </div>
+                                <div class="d-grid mb-4">
+                                    <button type="submit" class="btn btn-primary">Register</button>
+                                </div>
+                            </form>
+                            <div class="text-center">
+                                <a href="/login" class="btn btn-info w-100">Login</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    {{#if failRegister}}
+    <script type="text/javascript">
+        alert('Register Failed, User exists!');
+    </script>
+    {{/if}}
+</body>
 </html>
