--- a/src/views/chatView.handlebars
+++ b/src/views/chatView.handlebars
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{title}}</title>
-    </head>
-    <body>
-        <div id="userData" data-user="{{ user }}"></div>
-        <div>
-            <input id="chatBox" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>{{title}}</title>
+</head>
+<body>
+    <header class="bg-light py-3">
+        <div class="container">
+            <div class="d-flex align-items-center">
+                <img src="/img/main-logo.png" alt="Main Logo" class="me-3">
+                <div class="flex-grow-1 text-center">
+                    <h2>Chat View</h2>
+                </div>
+                <div class="d-flex align-items-center">
+                    <div class="me-3">Welcome {{user}}!</div>
+                    <a href="/logout" class="btn btn-outline-danger">Logout</a>
+                </div>
+            </div>
         </div>
-        <p id="message"></p>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="/js/chatBox.js"></script>
-    </body>
+    </header>
+
+    <main class="container my-4">
+        <div class="row">
+            <div class="col-md-12">
+                <div id="chatBox" class="border p-3" style="height: 400px; overflow-y: auto;">
+                </div>
+                <div class="input-group mt-3">
+                    <input id="messageInput" type="text" class="form-control" placeholder="Type your message...">
+                    <button id="sendButton" class="btn btn-primary">Send</button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chatBox.js"></script>
+</body>
 </html>
