--- a/src/views/mockingView.handlebars
+++ b/src/views/mockingView.handlebars
@@ -1,32 +1,162 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <title>{{title}}</title>
-    </head>
-    <body>
-        <h1>Mocking Products</h1>
-            <div id="product-list" class="row d-flex">
-                {{#each products}}
-                    <div class="col-3 border">
-                        <ul>
-                            <li>
-                                <h2>Title: {{this.title}}</h2>
-                                <p>Description: {{this.description}}</p>
-                                <p>Price: ${{this.price}}</p>
-                                <p>Product Code: {{this.code}}</p>
-                                <p>Thumbnail: {{this.thumbnail}}</p>
-                                <p>Stock: {{this.stock}}</p>
-                                <p>Status: {{this.status}}</p>
-                                <p>Category: {{this.category}}</p>
-                                <p>Owner: {{this.owner}}</p>
-                            </li>
-                        </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>{{title}}</title>
+</head>
+<body>
+   <header class="bg-light py-3">
+        <div class="container">
+            <div class="d-flex align-items-center">
+                <img src="/img/main-logo.png" alt="Main Logo" class="me-3">
+                
+                <div class="flex-grow-1 text-center">
+                    <h2>Mocking Products</h2>
+                </div>
+                
+                <div class="d-flex flex-column align-items-start">
+                    <div class="d-flex align-items-center mb-1">
+                        <div class="me-3">
+                            Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!
+                        </div>
+                        {{#if isLoggedIn}}
+                            <small class="me-3">Role: {{role}}</small>
+                        {{/if}}
                     </div>
-                {{/each}}
+                    <div class="d-flex align-items-center mt-2">
+                        {{#if isAdmin}}
+                            <a href="/switcher" class="btn btn-secondary btn-sm me-2">Switcher</a>
+                        {{/if}}
+                        {{#if isLoggedIn}}
+                            <a href="/logout" class="btn btn-outline-danger btn-sm">Logout</a>
+                        {{else}}
+                            <a href="/login" class="btn btn-outline-primary btn-sm">Login</a>
+                        {{/if}}
+                    </div>
+                </div>
             </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
+        </div>
+    </header>
+
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/img/background.jpg" class="d-block w-100" alt="Products">
+                <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-dark" style="bottom: 0; top: 0;">
+                    <h5 class="display-4">PRODUCTS</h5>
+                    <p class="lead">Your Products are great.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/img/background.jpg" class="d-block w-100" alt="Technology">
+                <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-dark" style="bottom: 0; top: 0;">
+                    <h5 class="display-4">TECHNOLOGY</h5>
+                    <p class="lead">Technology hack you won't get.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    {{#if isAdmin}}
+        <section class="container my-4">
+            <h2>Add New Product</h2>
+            <form id="addProductForm">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title:</label>
+                    <input type="text" id="title" name="title" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description:</label>
+                    <textarea id="description" name="description" class="form-control" rows="4" required></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="price" class="form-label">Price:</label>
+                    <input type="number" id="price" name="price" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <div id="thumbnailsContainer" class="mb-3">
+                        <label for="thumbnail" class="form-label">Thumbnail:</label>
+                        <input type="file" id="thumbnail" name="thumbnail" class="form-control" required>
+                        <button type="button" id="addThumbnailBtn" class="btn btn-secondary mt-3">Add Another Thumbnail</button>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="code" class="form-label">Product Code:</label>
+                    <input type="text" id="code" name="code" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="stock" class="form-label">Stock:</label>
+                    <input type="number" id="stock" name="stock" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="category" class="form-label">Category:</label>
+                    <input type="text" id="category" name="category" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Add Product</button>
+            </form>
+        </section>
+    {{/if}}
+
+    <main class="container my-4">
+        <h2 class="text-center">Page {{page}}</h2>
+        <div id="product-list" data-cart-id="{{cartId}}" class="row">
+            {{#each products}}
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="{{this.thumbnail}}" class="card-img-top" alt="Thumbnail">
+                        <div class="card-body">
+                            <h5 class="card-title">{{this.title}}</h5>
+                            <p class="card-text">Description: {{this.description}}</p>
+                            <p class="card-text">Price: ${{this.price}}</p>
+                            <p class="card-text">Product Code: {{this.code}}</p>
+                            <p class="card-text">Stock: {{this.stock}}</p>
+                            <p class="card-text">Status: {{this.status}}</p>
+                            <p class="card-text">Category: {{this.category}}</p>
+                            <p class="card-text">Owner: {{this.owner}}</p>
+                            {{#if ../isLoggedIn}}
+                                <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                                {{#if ../isAdmin}}
+                                    <button type="button" class="btn btn-danger me-2 mb-2 deleteButton" data-product-id="{{this._id}}">Delete Product</button>
+                                    <button type="button" class="btn btn-warning me-2 mb-2 updateButton" data-product-id="{{this._id}}">Update Product</button>
+                                {{/if}}
+                            {{/if}}
+                        </div>
+                    </div>
+                </div>
+            {{/each}}
+            {{#if isLoggedIn}}
+                <div class="d-flex justify-content-center my-4">
+                    <button type="button" class="btn btn-success finishPurchase" data-product-id="{{productId}}" data-cart-id="{{cartId}}">Finish Purchase</button>
+                </div>
+            {{/if}}
+            <div class="d-flex justify-content-center">
+                {{#if prevPage}}
+                    <a href="{{prevPage}}" class="btn btn-primary me-2">Previous</a>
+                {{/if}}
+                {{#if nextPage}}
+                    <a href="{{nextPage}}" class="btn btn-primary">Next</a>
+                {{/if}}
+            </div>
+        </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        const user = {
+            role: '{{role}}'
+        };
+    </script>
+    <script src="/js/index.js"></script>
+</body>
 </html>
