--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -22,7 +22,7 @@
                             Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!
                         </div>
                         {{#if isLoggedIn}}
-                            <small class="me-3">Role: {{role}}</small>
+                            <small class="me-3" data-user-role="{{role}}">Role: {{role}}</small>
                         {{/if}}
                     </div>
                     <div class="d-flex align-items-center mt-2">
@@ -68,7 +68,7 @@
     </div>
 
 
-    {{#if isAdmin}}
+    {{#if (or isAdmin isPremium)}}
         <section class="container my-4">
             <h2>Add New Product</h2>
             <form id="addProductForm">
@@ -153,11 +153,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script>
-        const user = {
-            role: '{{role}}'
-        };
-    </script>
     <script src="/js/index.js"></script>
 </body>
 </html>
